--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         <div class="col-6">
                             <div class="card" style="width: 18rem;">
                                 <div class="card-body">
-                                    
+
                                   <h5 class="card-title">IP</h5>
                                   <h6 class="card-subtitle mb-2 text-muted">Protocolo de Internet</h6>
                                   <p class="card-text">Utiliza direcciones series de cuatro octetos con formato de punto decimal (como por ejemplo 75.4.160.25). Este protocolo lleva los datos a otras máquinas de la red.</p>
@@ -163,7 +163,7 @@
                     </div>
                 </div>
             </div>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Saber Más</a>
+            <a class="btn btn-primary btn-lg" href="https://openwebinars.net/blog/que-es-tcpip/" target="_blank" role="button">Saber Más</a>
         </div>
     </div>
 
