--- a/index.html
+++ b/index.html
@@ -161,6 +161,11 @@
                             </div>
                         </div>
                     </div>
+                    <p>
+                        El modelo TCP/IP permite un intercambio de datos fiable dentro de una red, definiendo los pasos a seguir desde que se envían los datos (en paquetes) hasta que son recibidos. Para lograrlo utiliza un sistema de capas con jerarquías (se construye una capa a continuación de la anterior) que se comunican únicamente con su capa superior (a la que envía resultados) y su capa inferior (a la que solicita servicios).
+                    </p>
+                    <hr class="my-4">
+                    <h3 class="display-3">Capas del Modelo TCP/IP</h3>
                 </div>
             </div>
             <a class="btn btn-primary btn-lg" href="https://openwebinars.net/blog/que-es-tcpip/" target="_blank" role="button">Saber Más de TCP/IP</a>
