--- a/index.html
+++ b/index.html
@@ -166,8 +166,9 @@
                     </p>
                     <hr class="my-4">
                     <h3 class="display-3">Capas del Modelo TCP/IP</h3>
+                    <img src="http://elcuadernodejhonny.files.wordpress.com/2011/10/figura2-1.jpg" alt="">
                 </div>
-            </div>
+            </div><br>
             <a class="btn btn-primary btn-lg" href="https://openwebinars.net/blog/que-es-tcpip/" target="_blank" role="button">Saber Más de TCP/IP</a>
         </div>
     </div>
