--- a/index.html
+++ b/index.html
@@ -234,7 +234,21 @@
         </div>
     </div>
 
-    <div class="container24"></div>
+    <div class="container24">
+        <div class="jumbotron">
+            <h1 class="display-4">Pilas de protocolos y flujos de datos</h1>
+            <p class="lead">Pilas de protocolos se encarga de hacer conexión de datos otorgando control de errores y control de flujo, evitando saturación al receptor. Algunos de los protocolos utilizados con frecuencia con:</p>
+            <hr class="my-4">
+            <p><strong>HDLC.</strong>  Controla el vínculo de datos en alto nivel.</p>
+            <p><strong>PPP.</strong> Entrama detectando errores, activa lineas, prueba líneas, negocia opciones en capa de red y desactiva líneas.</p>
+            <p class="lead">Flujo de datos se encuentra dentro de las propiedades funcionales del servicio de entrega confiable entre la interfaz y el servicio TCP/IP:</p>
+            <p><strong>Orientación de Flujo.</strong> Servicio de entrega secuencial en grande volúmenes de datos a aplicaciones destino.</p>
+            <p><strong>Conexión de circuito virtual.</strong> Verifica la transferencia de los datos se reciban correctamente con conexión entre las máquinas.</p>
+            <p><strong>Transferencia con memoria intermedia.</strong> Mecanismo utilizado dentro de aplicaciones para permitir la transferencias dentro de una red.</p>
+            <p><strong>Flujo no estructurada.</strong> Acuerdo del formato antes de iniciar secion en una conexión dentro del servicio de flujo.</p>
+            <p><strong>Conexión Full Duplex.</strong> Flujos independientes moviéndose en direcciones diferentes sin relacionarse entre sí. Carga, transporta y descarga reduciendo tráfico en la red.</p>
+        </div>
+    </div>
     
     <script src="js/anime.min.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
